--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -47,11 +47,11 @@ $theme-list: light dark;
 @mixin backgroundImg {
   @each $theme in $theme-list {
     .#{$theme} & {
-      background: url('/assets/images/bg-desktop-'+$theme+'.jpg');
+      background: url('../assets/images/bg-desktop-'+$theme+'.jpg');
       background-size: 100% auto;
       background-repeat: no-repeat;
       @include mobile {
-        background: url('/assets/images/bg-mobile-'+$theme+'.jpg');
+        background: url('../assets/images/bg-mobile-'+$theme+'.jpg');
         background-size: 100% auto;
         background-repeat: no-repeat;
       }
